# starid

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CNAME  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  _config.yml  about.md  cmakelists.txt  comments.md  comments.py  license  manifest.in  pyproject.toml  pytest.ini  readme.md  references.md  requirements.txt  setup.py  starid.dockerfile  test_starid.py
.well-known/: nostr.json
_drafts/: a-draft.md  backwards-to-i.md  basis-inverse.md  cleve-moler.md  cutler.md  draft1.md  empty.md  fms.md  graphite.md  harwell-la01-la04.md  linpack.md  lost-in-space.md  nineties.md  rand.md  simplex52.md  six-bit-hollerith.md  six-easy-pieces.md  sixties-assembly.md  starid04-pyramid.md  starid06-uncalibrated.md  starid77.md  starid86-hst-astrometry.md  starid89-sirtf.md  starid93.md  starid97a-grid-algorithm.md  sun-1.md  tmp.md  tops-10.md  vms.md
_includes/: footer.html  google-analytics.html  header.html  z-header.html
_layouts/: base.html
_posts/: 2024-04-01-april-fools.md  2024-04-01-experiment.md  2024-04-07-unix.md  2024-04-13-pdp-10.md  2024-04-16-aerospace-numerical-computing.md  2024-04-17-simplex-algorithm.md  2024-04-18-kalman-filter.md  2024-04-20-modern-kalman-filter.md  2024-04-21-particle-filter.md  2024-04-28-vax.md  2024-05-05-sun.md  (+48 more)
libstarid/: CMakeLists.txt  Makefile  __init__.py  api.cpp  api.h  cmakelists.txt  extractor.py  globals.cpp  globals.h  identification.cpp  identification.pro  libstarid.cpp  libstarid.h  libstarid.pro  python_api.cpp  python_api.h  python_demo.py  readme.md  sky.cpp  sky.h  skymap.cpp  skymap.h  starpairs.cpp  starpairs.h  stars.cpp  stars.pro  startriangle.cpp  startriangle.h  startriangleidentifier.cpp  startriangleidentifier.h  startriangles.cpp  startriangles.h  startriangleside.cpp  startriangleside.h  startrianglestarid.cpp  startrianglestarid.h  test.py  test2.py  triangles.cpp  triangles.h  (+2 more)
libstarid/cereal/: CTestTestfile.cmake  cmake_install.cmake
libstarid/cereal-1.2.2/: Makefile
libstarid/cereal-1.2.2/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libstarid/cereal-1.2.2/sandbox/: Makefile  cmake_install.cmake
libstarid/cereal-1.2.2/sandbox/sandbox_shared_lib/: Makefile
libstarid/cereal-1.2.2/unittests/: CTestTestfile.cmake  Makefile  test_pod
libstarid/cereal/sandbox/: CTestTestfile.cmake
libstarid/cereal/sandbox/sandbox_shared_lib/: CTestTestfile.cmake  cmake_install.cmake
libstarid/cereal/unittests/: cmake_install.cmake
libstarid/debug/: CMakeLists.txt  debug.cpp
libstarid/debug-driver/: CMakeLists.txt
libstarid/eigen-3.3.5/unsupported/Eigen/CXX11/src/Tensor/: README.md
libstarid/libstarid-test/: CMakeLists.txt
libstarid/pybind11/: Makefile  cmake_install.cmake
libstarid/pybind11-2.2.3/tools/: pybind11Tools.cmake
libstarid/pybind11/docs/: changelog.rst
libstarid/pybind11/tests/.pytest_cache/v/cache/: nodeids
libstarid/sky/: geometry.cpp  geometry.h  sky.cpp  sky.h  skymap.cpp  skymap.h
libstarid/test/: CMakeLists.txt
libstarid/testrunner/: CMakeLists.txt  testrunner.cpp
libstarid/triangles/: nomad.cpp  nomad.h  nomad_triangle.cpp  nomad_triangle.h  settler.cpp  settler.h  settler_triangle.cpp  settler_triangle.h  star_pairs.cpp  star_pairs.h  star_triangle_side.cpp  star_triangle_side.h  starpairs.cpp  starpairs.h  startriangle.cpp  startriangle.h  startriangleidentifier.cpp  startriangleidentifier.h  startriangleside.cpp  startriangleside.h
simplex/la04/: ChangeLog  Makefile.am  config.status  configure  configure.ac  libtool
simplex/la04/example/: Makefile.am  Makefile.in  la04ds  la04ds.data  la04ds.f  la04ds.output  la04ss  la04ss.data  la04ss.f  la04ss.output  runtest.sh
simplex/la04/src/: Makefile.in  la04d.f  la04s.f  sdeps.f
(+552 files in other folders)
